Closed Bug 66688 Opened 24 years ago Closed 23 years ago

Install error doesn't specify which module failed, and OK button doesn't dismiss dialog

Categories

(SeaMonkey :: Installer, defect)

x86
Linux
defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: akkzilla, Assigned: samir_bugzilla)

References

Details

(Whiteboard: alecf to checkin)

Attachments

(2 files)

With the 1/26 Linux commercial build, I get two dialogs saying 
Error[621]: An installer module (.xpi) failed to install
but not telling me which module.

With the 1/24 build, I got one such dialog.

In both cases, if I click OK, the OK button goes away but the dialog stays up.

This is really three bugs (should I split off the other two?):
1. Things are failing to install in the current build.
2. The installer doesn't tell me which module failed to install.
3. The dialog doesn't unpost when OK is clicked.

Here's what I do:
- Download the net installer (/tmp/netscape-i686-pc-linux-gnu-installer.tar.gz).
- Unpack it into a new directory and run netscape-installer.
- Specify a new directory, /u/akkana/nstrunk (deleting any previous one which
was there) and custom install.
- Un-check English-DE since I don't speak German, but leave the rest of the
defaults alone.
i believe this is related to the talkback module, see bug 66542 and 54579
Would talkback account for two failure messages, not just one?

Okay, assuming that it somehow does account for both messages, I'm changing the
summary to cover the other two bugs.
Summary: Error[621]: An installer module (.xpi) failed to install → Install error doesn't specify which module failed, and OK button doesn't dismiss dialog
the 1/26 build included psm and talkback xpi files that were both less than 1k,
 the 1/24 build didn't include psm at all but did include the > 1k talkback,
that might be why you received two errors with 1/26 and one with 1/24. the
installer is looking for non-present files and barfing. the last "normal" sized
talkback.xpi seems to have been in the 2001-01-19-08-mtrunk build.
sounds like they have the psm build problem repaired ( bug 66738 )
reassign
Component: Installer → Installer: XPI Packages
QA Contact: gemal → gbush
Samir owns the Linux installer, but keeping Sean in the CC list because I 
believe the windows installer has the same problem.

Much more detail is written to the install log (the intention being that this 
will be useful for tech support purposes), but it appears the install log is 
then deleted along with everything else in the case of a failure!

The specific causes of the recent errors were build problems (release staging 
server name changed and no one updated the installer build scripts to match, 
plus talkback server problems) so your item (1) is known, covered in another 
bug, and hopefully fixed.

I don't see a problem with combining your issues 2 and 3 in this bug. Samir can 
split out a separate bug for one of them if he's so inclined.
Assignee: ssu → sgehani
PSM is still not being installed with this morning's build (2001012821) on
Linux. To top things off, I can't event get PSM from iPlanet's site anymore.
This effectively makes Mozilla utterly useless for me since I can no longer have
access to email. *sigh* I'll go back to 20010119 since it seems to be the last
one that worked correctly.

With this morning's install, I still get a dialog saying that a module couldn't
be installed properly. But it doesn't say which module. I suspect PSM... :-)
Looking at the zippy archive sizes the talkback module is still not produced 
correctly, PSM looks OK. Try installing w/out talkback.
the 2001013010 linux build has psm and talkback, no problems with install
The problem number 2 still exists the nightly build as of 2001-03-12:
The installer doesn't tell me which module failed to install.
It should be really easy to fix.
the talkback.xpi was broken again on the 12th, and a fix was checked in today
for the installer. see bug 67259
adding ktrina as QA contact for subset of Installer bugs 
I will continue to monitor as well
QA Contact: gbush → ktrina
*** Bug 67259 has been marked as a duplicate of this bug. ***
Nice solution!  Few nits:

1> gCmp doesn't need to be global; it's a parameter.  (Side note: parameters are
prefixed with a, e.g. aFoo, where "a" = argument passed in.  So rename it to
aComp or some such.) 

2> Tabbing is off.  Use four spaces in place of tabs.  Don't use tabs.

3> For genericity, make the overloaded form take a string instead of a component
i.e., ErrorHandler(int aErr, const char *aErrMsg); 

4> Not sure why "(.xpi)" was ommitted from the error string but I put it in
there for people to understand what we were referring to if they tinkered around
with the xpi directory and found what it was that we called installer modules. 
Please re-insert it.  Thanks.
r=sgehani on patch in attachment id 34768.
brendan could you please super review..thanks
please super review alec.. thanx
sr=alecf
Thanks alec ... samir could you please check this in too :) ..thanks
I got the exact same error message while installing 2001-05-22-05-trunk/ 
netscape-i686-pc-linux-gnu-installer.tar.gz (Error[621]: An installer module 
(.xpi) failed to install).  Occurred during Full Install, while Macromedia Flash 
Player was being installed.
alecf: will you have time to check this in soon?  This will help the OEM's on
their product releases.
sorry, lost track of this one. updating status whiteboard - hopefully I can get
to it this week
Whiteboard: alecf to checkin
a= asa@mozilla.org for checkin to the trunk.
(on behalf of drivers)
Blocks: 83989
fix has been checked in by me. 
Can QA please verify and appropriately close as FIXED. thanx.
Developers resolve as fixed.  Then QA marks verified.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Verified code fix
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
Component: Installer: XPI Packages → Installer
QA Contact: ktrina → general
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: