Overloading Errorhandler to handle E_INSTALL separately. bug 66688, r=sgehani, sr=alecf, a=asa